Fix styling error in overflow text of direct message title in sidebar

--- a/app/assets/stylesheets/components/_channel_list.scss
+++ b/app/assets/stylesheets/components/_channel_list.scss
@@ -34,14 +34,15 @@
 }
 
 .channel-li {
-  font-size: 16px;
-  padding: 0px 12px;
-  cursor: pointer;
   max-height: 26px;
   max-width: 200px;
   height: 26px;
-  align-items: center;
+  padding: 0px 12px;
+  font-size: 16px;
   overflow: hidden;
+  color: rgb(202,196,201);
+  cursor: pointer;
+  // align-items: center;
 }
 
 .channel-li:hover {
